# vehicle_nmpc

./: .gitignore  LICENSE  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: lint.yml
src/tracked_vehicle_nmpc/: __init__.py  executor.py  run.py
src/tracked_vehicle_nmpc/configs/: config.yaml
src/tracked_vehicle_nmpc/configs/runner/: base.yaml
src/tracked_vehicle_nmpc/models/: base_model.py  tracked_veh_kinematic.py
src/tracked_vehicle_nmpc/utils/: __init__.py  config.py  exceptions.py  plotter.py  runner.py
src/vehicle_nmpc/: __init__.py  run.py
src/vehicle_nmpc/configs/: config.yaml
src/vehicle_nmpc/configs/controller/: rti_nmpc.yaml  rti_nmpc_dynamic.yaml  rti_nmpc_kinematic.yaml
src/vehicle_nmpc/configs/model/: tracked_veh_dynamic.yaml  tracked_veh_kinematic.yaml
src/vehicle_nmpc/controller/: __init__.py  base.py  builder.py  rti_nmpc.py
src/vehicle_nmpc/experiments/: __init__.py  closed_loop.py  export.py  metrics.py  optimization.py
src/vehicle_nmpc/metrics/: __init__.py  base.py  control.py  performance.py  plotting.py  tracking.py
src/vehicle_nmpc/models/: __init__.py  base.py  base_model.py  builder.py
src/vehicle_nmpc/problem/: __init__.py  base.py  builder.py  ocp_problem.py
src/vehicle_nmpc/sim/: __init__.py  acados_sim.py  base.py  builder.py
src/vehicle_nmpc/trajectory/: __init__.py  base.py  builder.py  providers.py
src/vehicle_nmpc/utils/: config.py  exceptions.py  factory.py  runner.py  validation.py
(+13 files in other folders)
