[project]
name = "vehicle_nmpc"
version = "1.0.0"
authors = [
  { name="Kirill Khitushkin", email="khitushkink@mail.ru" },
]
description = "Nonlinear model predictive control for ground vehicles."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/KirillHit/vehicle_nmpc"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "INP001"
]
